provarAnt/00D190000000ZY2EAM/objects/Discount__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Discount</label>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>